fix some header spacing

--- a/styles/_cv.scss
+++ b/styles/_cv.scss
@@ -10,9 +10,9 @@
         font-family: "Times New Roman", Times, serif;
     }
     
-    h2, h3, h4, h5 {
-        margin-bottom: 2px;
-    }
+    // h2, h3, h4, h5 {
+    //     margin-bottom: 2px;
+    // }
 
     h2 {
         margin-top: 40px;
