--- a/styles/_util.scss
+++ b/styles/_util.scss
@@ -16,6 +16,10 @@
         font-size: 0.82em;
     }
 
+    &__no-header-bottom {
+        margin-bottom: 2px;
+    }
+
     &__mb2 {
         margin-bottom: 6px;
     }
